# monadic_operations_cpp23

./: PERFORMANCE.md  README.md
source/: CMakeLists.txt  Readme.md
source/01_functor/: CMakeLists.txt  main.cpp  testfunctor.cpp  testfunctor.h
source/02_callables/: CMakeLists.txt  main.cpp  testcallables.cpp  testcallables.h
source/03a_classicloop/: CMakeLists.txt  classicloop.cpp  classicloop.h  main.cpp
source/03b_rangemonad/: CMakeLists.txt  main.cpp  rangemonad.cpp  rangemonad.h
source/04a_classicerrorhandling/: CMakeLists.txt  classicerrorhandling.cpp  classicerrorhandling.h  main.cpp
source/04b_optionalmonad/: CMakeLists.txt  main.cpp  optionalmonad.cpp  optionalmonad.h
source/04c_expectedmonad/: CMakeLists.txt  expectedmonad.cpp  expectedmonad.h  main.cpp
source/04x_classicerrorhandlingExceptions/: CMakeLists.txt  classicerrorhandling_exceptions.cpp  classicerrorhandling_exceptions.h  main.cpp
source/05_defaultmonad/: CMakeLists.txt  defaultmonad.cpp  defaultmonad.h  main.cpp
source/06a_pointerclassic/: CMakeLists.txt  main.cpp  pointerclassic.cpp  pointerclassic.h
source/06b_pointermonad/: CMakeLists.txt  main.cpp  pointermonad.cpp  pointermonad.h
source/common/: compilerinfo.h  diagnosticinfo.cpp  diagnosticinfo.h  elementdata.cpp  elementdata.h  noisy.cpp  noisy.h  pointerscommon.h  printutils.h  stacktraceutils.cpp  stacktraceutils.h  utils.cpp  utils.h
source/x1a_traceclassic/: main.cpp
source/x1b_tracervo/: CMakeLists.txt  main.cpp
source/x2_perfectforward/: CMakeLists.txt  main.cpp
sources/: CMakeLists.txt  README.md  readme.md
sources/01x_classicerrorhandlingExceptions/: CMakeLists.txt  classicerrorhandling_exceptions.cpp  main.cpp
sources/02_functor/: CMakeLists.txt  functor.h  main.cpp  testfunctor.cpp  testfunctor.h
sources/04_callables/: CMakeLists.txt  main.cpp  testcallables.cpp  testcallables.h
sources/06a_classicloop/: CMakeLists.txt  classicloop.cpp  classicloop.h  main.cpp
sources/06b_rangemonad/: CMakeLists.txt  main.cpp  rangemonad.cpp
sources/07_purefunctions/: CMakeLists.txt  main.cpp  purefunctions.cpp  purefunctions.h
sources/08a_classicerrorhandling/: CMakeLists.txt  classicerrorhandling.cpp  classicerrorhandling.h  legacyupgrade.h  main.cpp
sources/08b_optionalmonad/: CMakeLists.txt  main.cpp  optionalmonad.cpp  optionalmonadtest.cpp  optionalmonadtest.h
sources/09_expectedmonad/: CMakeLists.txt  expectedmonad.cpp  expectedmonad.h  main.cpp
sources/10_defaultmonad/: CMakeLists.txt  defaultmonad.cpp  main.cpp
sources/12a_pointerclassic/: CMakeLists.txt  main.cpp  pointerclassic.cpp
sources/12b_pointermonad/: CMakeLists.txt  main.cpp  pointermonad.cpp
sources/13a_continuationmonad/: CMakeLists.txt  main.cpp  testcontinuation.cpp  testcontinuation.h
sources/13b_writermonad/: CMakeLists.txt  main.cpp  testwriter.cpp  testwriter.h  writermonad.cpp  writermonad.h
sources/13c_continuationandwriter/: CMakeLists.txt  main.cpp  testcontinuationwriter.cpp  testcontinuationwriter.h
sources/common/: compilerinfo.h  diagnosticinfo.cpp  diagnosticinfo.h  elapsed.cpp  elapsed.h  elementdata.cpp  elementdata.h  globals.h  noisy.cpp  noisy.h  pointerscommon.cpp  sharedfunctions.cpp  sharedfunctions.h  sleepy.cpp  sleepy.h  stacktraceutils.cpp  utils.cpp  utils.h
sources/x1a_traceclassic/: CMakeLists.txt  main.cpp
sources/x1b_tracervo/: main.cpp
sources/x2_perfectforward/: main.cpp
sources/x3_benchmark/: CMakeLists.txt  benchmark.h  benchmarkerrorhandling.cpp  benchmarkerrorhandling.h  benchmarkranges.cpp  benchmarkranges.h  configureerrorhandling.h  configureranges.h  ctrack.hpp  errorhandlingutilities.h  main_errorhandling.cpp  main_ranges.cpp  parsecommandline.cpp  parsecommandline.h  rangesutilities.cpp  rangesutilities.h  simulatework.cpp  simulatework.h
