cmake_minimum_required(VERSION 3.14)
project(2024_monadicOperations LANGUAGES CXX)

add_subdirectory(01_functor/)
add_subdirectory(02_callables)
add_subdirectory(03a_classicloop/)
add_subdirectory(03b_rangemonad/)
add_subdirectory(04a_classicerrorhandling/)
add_subdirectory(04b_optionalmonad/)
add_subdirectory(04c_expectedmonad/)
add_subdirectory(04x_classicerrorhandlingExceptions/)
add_subdirectory(05_defaultmonad/)
add_subdirectory(06a_pointerclassic/)
add_subdirectory(06b_pointermonad/)
add_subdirectory(x1a_traceclassic/)
add_subdirectory(x1b_tracervo/)
add_subdirectory(x2_perfectforward/)


